:tada: Finished project

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron . --enable-transparent-visuals --disable-gpu"
   },
   "keywords": [],
   "author": "",
